# ChangeLog for dev-ruby/ri_cal
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*ri_cal-0.8.8-r1 (26 Sep 2012)

  26 Sep 2012; Hans de Graaff <graaff@gentoo.org> +ri_cal-0.8.8-r1.ebuild,
  +files/ri_cal-0.8.8-rails32.patch:
  Add patch for compatibility with Rails 3.2 and higher.

*ri_cal-0.8.8 (26 Apr 2012)

  26 Apr 2012; Hans de Graaff <graaff@gentoo.org> +ri_cal-0.8.8.ebuild,
  +metadata.xml:
  Initial import. May be a better replacement for icalendar.
