@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ri_cal
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  30 Aug 2013; Hans de Graaff <graaff@gentoo.org> -ri_cal-0.8.8.ebuild:
+  Cleanup.
 
 *ri_cal-0.8.8-r1 (26 Sep 2012)
 
